# dsml4s8e

./: .gitignore  README.md  component.py  dag_params.py  extract_dag_params_from_nb.py  lib_cfg.py  local_storage.py  nb_context.py  nb_data_keys.py  nb_interface.py  nb_parser.py  notebook_interface.py  project.py  pyproject.toml  runner.py  setup.py  setup_pipeline.sh  storag.py  storage.py  storage_catalog.py  urls.py
docs/: index.md
dsml4s8e/: dag_params.py  data_catalog.py  define_job.py  dotted_catalog_path.py  dotted_urls_names.py  extract_dag_params_from_nb.py  local_storage.py  nb_data_keys.py  nb_interface.py  nb_op.py  op_params_from_nb.py  storage_catalog.py  urls.py
dsml4s8e/dsmlcatalog/: dagster_home.py  local_storage.py
dsml4s8e/storage_rw/: pandas_loacl.py
dsml4s8e/tests/: __init__.py  test_extract_dag_params_from_nb.py  test_urls.py
dsml4s8e_tests/: context_mock.py  test_dag_params.py  test_dagster_home_catalog.py  test_do_dotted_paths.py  test_do_dotted_urls_names.py  test_extract_dag_params_from_nb.py  test_nb_data_keys.py  test_nb_interface.py  test_nb_op.py  test_op_params_from_nb.py  test_storage_catalog.py  test_urls.py
dsml4s8e_tests/notebooks/: nb_with_params.ipynb
images/dev/: Dockerfile  requirements.txt  setup_pipeline.sh
test/: test_component.py  test_dag_params.py  test_extract_dag_params_from_nb.py  test_nb_context.py  test_nb_data_keys.py  test_nb_interface.py  test_nb_parser.py  test_storage_catalog.py  test_urls.py
test/data/: nb_interface.ipynb  nb_with_params.ipynb  parser_test.ipynb
(+18 files in other folders)
