[tool.poetry]
name = "dsml4s8e"
version = "0.1.4"
description = "lib to build dagster pipelines from standalone notebooks"
authors = ["Aleksander Motuzov <motuzov@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.4"
dagstermill = "^0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
